--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,14 @@
     <title>Tracey</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/lumen/bootstrap.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div id='container'></div>
+    <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="app.js"></script>
-    <!-- Have no fear, OPTIMUS PRIME IS HERE -->
-    <script src="http://eb-ci.wmm63vqska.eu-west-1.elasticbeanstalk.com/primus/primus.js"></script>
-    <script>
-      primus = new Primus('http://eb-ci.wmm63vqska.eu-west-1.elasticbeanstalk.com');
-    </script>
   </body>
 
 </html>
