--- a/src/index.template.html
+++ b/src/index.template.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <div id='container'></div>
-    <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="https://d3js.org/d3.v3.js" charset="utf-8"></script>
   </body>
 </html>
