Adds auth login to access tracey

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -11,6 +11,8 @@
   </head>
   <body>
     <div id='container'></div>
+    <!-- Auth0Lock script -->
+    <script src="//cdn.auth0.com/js/lock-9.1.min.js"></script>
     <script src="https://d3js.org/d3.v3.js" charset="utf-8"></script>
   </body>
 </html>
