--- a/src/index.template.html
+++ b/src/index.template.html
@@ -12,5 +12,7 @@
   <body>
     <div id='container'></div>
     <script src="https://d3js.org/d3.v3.js" charset="utf-8"></script>
+    <!-- Auth0Lock script -->
+    <script src="//cdn.auth0.com/js/lock-9.1.min.js"></script>
   </body>
 </html>
